<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_bar"
        layout="@layout/layout_title" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_header"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:src="@drawable/icon_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:visibility="invisible"
                android:textColor="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/nickname_asterisk"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:text="@string/asterisk"
                    android:textColor="@color/red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/nickname_asterisk"
                    android:text="@string/nickname_title" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:maxLength="20"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:paddingLeft="80dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/sex" />

                <RadioGroup
                    android:id="@+id/rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp"
                    android:tooltipText="@string/sex">

                    <RadioButton
                        android:id="@+id/rb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/tr_radio_op1" />

                    <RadioButton
                        android:id="@+id/rb2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/tr_radio_op2" />

                    <RadioButton
                        android:id="@+id/rb3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:checked="true"
                        android:text="@string/tr_radio_op3" />
                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/email_title" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:paddingLeft="40dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/password_asterisk"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:text="@string/asterisk"
                    android:textColor="@color/red" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/password_asterisk"
                    android:text="@string/password_title" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="numberPassword"
                    android:singleLine="true"
                    android:maxLength="6"
                    android:paddingLeft="80dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/password_again_asterisk"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:text="@string/asterisk"
                    android:textColor="@color/red" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/password_again_asterisk"
                    android:text="@string/password_again_title" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_again"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="numberPassword"
                    android:singleLine="true"
                    android:maxLength="6"
                    android:paddingLeft="80dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/password_tip"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/bt_complite"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg_green_crciry"
                android:enabled="false"
                android:text="@string/complite"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>