<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/top_bar"
        layout="@layout/layout_title"
        android:visibility="visible" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <any.xxx.anypeer.widget.NoScrollGridView
                android:id="@+id/gv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <any.xxx.anypeer.widget.supertext.SuperTextView
                android:id="@+id/stv_group_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone"
                app:sLeftTextString="@string/group_name"
                app:sRightIconRes="@drawable/right" />

            <any.xxx.anypeer.widget.supertext.SuperTextView
                android:id="@+id/stv_group_announcement"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:sLeftTextString="@string/group_announcement"
                app:sRightIconRes="@drawable/right" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_clear"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/claer_group_message"
                android:textColor="@color/red"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/spilt_line" />

            <TextView
                android:id="@+id/tv_delete"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/deleta_and_exit_group"
                android:textColor="@color/red"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>